src/objects/peer__Borrower_Information__c.object
<CustomObject>
    <fields>
        <fullName>peer__Credit_Rating_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Matrix</label>
        <referenceTo>peer__Credit_Rating_Matrix__c</referenceTo>
        <relationshipLabel>Borrower Information</relationshipLabel>
        <relationshipName>Borrower_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__FICO_Score__c</fullName>
        <label>FICO Score</label>
        <length>3</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>peer__SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Borrower Information</label>
    <listViews>
        <fullName>peer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Borrower Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrower Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>